Hero: fix mobile sizing and header overlap

--- a/frontend/css/header.css
+++ b/frontend/css/header.css
@@ -1,3 +1,8 @@
+:root {
+  --brand-logo-height: 25px;
+  --header-height: 4rem;
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -10,7 +15,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  /* height: 4rem; */
+  height: var(--header-height);
   z-index: 100;
   box-sizing: border-box;
 }
@@ -412,7 +417,4 @@
 
   .btn-outline { display: inline-block; justify-self: end; }
   .search-btn { justify-self: end; }
-}
-:root {
-  --brand-logo-height: 25px;
 }
